# full-stack-fastapi-postgresql

{{cookiecutter.project_slug}}/backend/: backend.dockerfile
{{cookiecutter.project_slug}}/backend/app/: pyproject.toml
{{cookiecutter.project_slug}}/backend/app/app/: backend_pre_start.py
{{cookiecutter.project_slug}}/frontend/: Dockerfile
